--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	repositories {
+		maven { url "https://maven.shedaniel.me" }
+	}
 }
 
 loom {
@@ -51,7 +54,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:12.0.665"
+	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:12.0.665"
+
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
